k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywebsite
  namespace: mywebsite
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mywebsite
  template:
    metadata:
      labels:
        app: mywebsite
    spec:
      containers:
        - name: nginx
          image: 323022619728.dkr.ecr.us-east-2.amazonaws.com/mysecondrepo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
