k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywebsite
  namespace: mywebsite
spec:
  type: ClusterIP
  selector:
    app: mywebsite
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
