k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mywebsite
  namespace: mywebsite
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:323022619728:certificate/87ff965f-decd-4d97-823d-55fe46160893
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ingressClassName: alb
  rules:
    - host: vamsi.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mywebsite
                port:
                  number: 80
    - host: www.vamsi.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mywebsite
                port:
                  number: 80
